安全和加固/iptables
# Generated by iptables-save v1.4.21 on Mon Apr  2 05:27:26 2018
*nat
:PREROUTING ACCEPT [316:14694]
:INPUT ACCEPT [308:14234]
:OUTPUT ACCEPT [5196:334418]
:POSTROUTING ACCEPT [5199:334598]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-POSTROUTING - [0:0]
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m ipvs --vdir ORIGINAL --vmethod MASQ -m comment --comment "" -j MASQUERADE
-A POSTROUTING ! -s 10.20.0.0/24 ! -d 10.20.0.0/24 -m ipvs --vdir ORIGINAL --vmethod MASQ -m comment --comment "" -j MASQUERADE
-A POSTROUTING -m set --match-set kube-router-pod-subnets src -m set ! --match-set kube-router-pod-subnets dst -m set ! --match-set kube-router-node-ips dst -j MASQUERADE
-A POSTROUTING ! -s 10.20.1.0/24 ! -d 10.20.1.0/24 -m ipvs --vdir ORIGINAL --vmethod MASQ -m comment --comment "" -j MASQUERADE
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
COMMIT
# Completed on Mon Apr  2 05:27:26 2018
# Generated by iptables-save v1.4.21 on Mon Apr  2 05:27:26 2018
*filter
:INPUT ACCEPT [1202:292534]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1181:298320]
:KUBE-FIREWALL - [0:0]
:KUBE-NWPLCY-BDCVV4CFXD57FKFT - [0:0]
:KUBE-POD-FW-6SLUKZKRCYTSPSEC - [0:0]
:KUBE-POD-FW-UN4FDQVA64SODCWE - [0:0]
-A INPUT -j KUBE-FIREWALL
-A FORWARD -d 10.20.3.8/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:go-cloudmsg-1638890330-ggg13 namespace: default to chain KUBE-POD-FW-6SLUKZKRCYTSPSEC" -j KUBE-POD-FW-6SLUKZKRCYTSPSEC
-A FORWARD -d 10.20.3.8/32 -m comment --comment "rule to jump traffic destined to POD name:go-cloudmsg-1638890330-ggg13 namespace: default to chain KUBE-POD-FW-6SLUKZKRCYTSPSEC" -j KUBE-POD-FW-6SLUKZKRCYTSPSEC
-A FORWARD -d 10.20.3.2/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:go-cloudmsg-1638890330-1c6vf namespace: default to chain KUBE-POD-FW-UN4FDQVA64SODCWE" -j KUBE-POD-FW-UN4FDQVA64SODCWE
-A FORWARD -d 10.20.3.2/32 -m comment --comment "rule to jump traffic destined to POD name:go-cloudmsg-1638890330-1c6vf namespace: default to chain KUBE-POD-FW-UN4FDQVA64SODCWE" -j KUBE-POD-FW-UN4FDQVA64SODCWE
-A FORWARD -s 10.20.0.0/16 -j ACCEPT
-A FORWARD -d 10.20.0.0/16 -j ACCEPT
-A FORWARD -i kube-bridge -m comment --comment "allow outbound traffic from pods" -j ACCEPT
-A FORWARD -o kube-bridge -m comment --comment "allow inbound traffic to pods" -j ACCEPT
-A FORWARD -o eth0 -m comment --comment "allow outbound node port traffic on node interface with which node ip is associated" -j ACCEPT
-A OUTPUT -d 10.20.3.8/32 -m comment --comment "rule to jump traffic destined to POD name:go-cloudmsg-1638890330-ggg13 namespace: default to chain KUBE-POD-FW-6SLUKZKRCYTSPSEC" -j KUBE-POD-FW-6SLUKZKRCYTSPSEC
-A OUTPUT -d 10.20.3.2/32 -m comment --comment "rule to jump traffic destined to POD name:go-cloudmsg-1638890330-1c6vf namespace: default to chain KUBE-POD-FW-UN4FDQVA64SODCWE" -j KUBE-POD-FW-UN4FDQVA64SODCWE
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-NWPLCY-BDCVV4CFXD57FKFT -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name test-network-policy namespace default" -m set --match-set KUBE-SRC-QY42RX2IHCMDKSZS src -m set --match-set KUBE-DST-BDCVV4CFXD57FKFT dst -m tcp --dport 80 -j ACCEPT
-A KUBE-POD-FW-6SLUKZKRCYTSPSEC -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-6SLUKZKRCYTSPSEC -m comment --comment "run through nw policy test-network-policy" -j KUBE-NWPLCY-BDCVV4CFXD57FKFT
-A KUBE-POD-FW-6SLUKZKRCYTSPSEC -d 10.20.3.8/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-6SLUKZKRCYTSPSEC -m comment --comment "default rule to REJECT traffic destined for POD name:go-cloudmsg-1638890330-ggg13 namespace: default" -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-UN4FDQVA64SODCWE -m comment --comment "rule for stateful firewall for pod" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-POD-FW-UN4FDQVA64SODCWE -m comment --comment "run through nw policy test-network-policy" -j KUBE-NWPLCY-BDCVV4CFXD57FKFT
-A KUBE-POD-FW-UN4FDQVA64SODCWE -d 10.20.3.2/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-UN4FDQVA64SODCWE -m comment --comment "default rule to REJECT traffic destined for POD name:go-cloudmsg-1638890330-1c6vf namespace: default" -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Mon Apr  2 05:27:26 2018
